flex/02-flex-header/style.css
.header  {
  font-family: monospace;
  background: papayawhip;
  display:flex;
  flex-direction:row;
  flex:1;
  justify-content:space-evenly;
  align-items:center;
  
  
}

.logo {
  font-size: 48px;
  font-weight: 900;
  color: tomato;
  background: white;
  padding: 2px;
  margin:auto;

}

ul {
  /* this removes the dots on the list items*/
  list-style-type: none;
  display:flex;
  flex:1;
  flex-direction: row;
  justify-content:space-between;
  align-items:center;
  margin:2px;
  padding:2px;

}

a {
  font-size: 22px;
  background: white;
  padding: 8px;
  /* this removes the line under the links */
  text-decoration: none;
  margin:4px;
}

